# backbay-sdk

./: .gitignore  .mcp.json  .mise.toml  .prettierignore  .prettierrc  CONTRIBUTING.md  README.md  bun.lockb  bunfig.toml  eslint.config.mjs  package.json  pyproject.toml  tsconfig.json  turbo.json  typedoc.json
.changeset/: README.md  config.json  release-all-packages.md  setup-npm-publish-npctv.md
.github/workflows/: ci.yml  docs.yml  publish-npm.yml  publish-pypi.yml  release.yml
docs/adr/: 001-two-tier-styling.md  002-dual-theme-systems.md  003-singleton-zustand-stores.md
docs/roadmap/: 01-fix-silent-builds.md  02-test-suite.md  03-split-glia-package.md  04-unify-themes.md  05-error-boundaries.md  06-build-pipeline.md  07-state-management.md  08-speakeasy-hardening.md  09-accessibility.md  10-documentation.md  README.md  TRACKING.md
scripts/: vitest.mjs
